@@ -1,52 +1,68 @@
 #!/bin/bash
 
-iteration="i16"
-#iteration="test15"
+# Settings
+tag=n0036
+nickname=Steve
+nGBPerJob=MAX
+#nGBPerJob=14
+athenaTag=17.3.1.1
 
-# get the samples of interest
-if [[ $# = 0 ]]; then
-        echo "submit all samples"
-        pattern="mc11"
-else
-        pattern=$1
-fi
-matches=(`cat susySamples.txt | grep $pattern | tr '\t' ','`)
+
+# dataset file and grep pattern can be provided as arguments
+pattern="mc12"
+dsFile="susySamples.txt"
+while [[ $# > 0 ]]; do
+        if [[ $1 == "-f" ]]; then
+                shift
+                dsFile=$1
+        else
+                pattern=$1
+        fi
+        shift
+done
+
+# User blacklist of sites
+blackList=`cat blacklist.txt`
+
+# A trick to parse the text, first separate columns by commas
+matches=(`cat $dsFile | grep $pattern | tr '\t' ','`)
 echo "${#matches[@]} matches"
 
-# set it up manually I guess
-#source ${ATLAS_LOCAL_ROOT_BASE}/packageSetups/atlasLocalPandaClientSetup.sh
 
 # Loop over samples
 for line in ${matches[@]}; do
+
+        # Now replace the commas with normal whitespace
         info=(`echo $line | tr ',' ' '`)
-        sample=${info[0]}
-        inDS=${info[1]}
-        sumw=${info[2]}
-        xsec=1
-        lumi=1
+        inDS=${info[0]}
+        sumw=${info[1]}
+        xsec=${info[2]}
+        sample=${inDS#mc12_8TeV.*.}
+        sample=${sample%.merge.*/}
 
-	outDS="user.Steve.$sample.SusyNt.$iteration/"
+        # Build the output dataset name
+        outDS="user.$nickname.${inDS%/}_$tag/"
+        outDS=${outDS/merge.NTUP_SUSY/SusyNt}
 
-        command="./gridScript.sh %IN -s $sample -w $sumw -x $xsec -l $lumi"
+        command="./gridScript.sh %IN -s $sample -w $sumw -x $xsec"
 
 	echo 
 	echo "__________________________________________________________________________________________________________"
-        echo "INPUT   $inDS"
-        echo "OUTPUT  $outDS"
-        echo "sample  $sample"
-        echo "lumi    $lumi"
-        echo "sumw    $sumw"
-        echo "xsec    $xsec"
+        echo "INPUT    $inDS"
+        echo "OUTPUT   $outDS"
+        echo "sample   $sample"
+        echo "sumw     $sumw"
+        echo "xsec     $xsec"
+        echo "command  $command"
 
 	
 	# prun command
-	prun --exec "$command" --tmpDir /tmp --inTarBall=area.tar --useRootCore \
-		--match "*root*" --outputs "susyNt.root" \
-                --nGBPerJob=MAX \
-                --extFile '*.so,*.root' \
-                --athenaTag=17.0.5.5 \
-		--inDS  $inDS \
-		--outDS $outDS
-                #--excludedSite=ECDF,WEIZMANN,OX,SARA,SHEF,PIC,LPSC,ARC,GLASGOW,GRIF-LAL \
+        prun --exec "$command" --useRootCore --tmpDir /tmp --inTarBall=area.tar \
+             --extFile '*.so,*.root' --match "*root*" --outputs "susyNt.root" \
+             --excludedSite=$blackList \
+             --nGBPerJob=$nGBPerJob \
+             --athenaTag=$athenaTag \
+             --inDS  $inDS \
+             --outDS $outDS
 
 done
