@@ -1,31 +1,8 @@
-wA_sl_1		mc11_7TeV.144867.simplifiedModel_wA_slep_noWcascade_1.merge.NTUP_SUSY.e1043_a131_s1353_a145_r2993_p935/		40000
-wA_sl_2		mc11_7TeV.144868.simplifiedModel_wA_slep_noWcascade_2.merge.NTUP_SUSY.e1043_a131_s1353_a145_r2993_p935/		40000
-wA_sl_3		mc11_7TeV.144869.simplifiedModel_wA_slep_noWcascade_3.merge.NTUP_SUSY.e1043_a131_s1353_a145_r2993_p935/		40000
-wA_sl_4		mc11_7TeV.144870.simplifiedModel_wA_slep_noWcascade_4.merge.NTUP_SUSY.e1043_a131_s1353_a145_r2993_p935/		40000
-wA_sl_5		mc11_7TeV.144871.simplifiedModel_wA_slep_noWcascade_5.merge.NTUP_SUSY.e1043_a131_s1353_a145_r2993_p935/		40000
-wA_sl_6		mc11_7TeV.144872.simplifiedModel_wA_slep_noWcascade_6.merge.NTUP_SUSY.e1043_a131_s1353_a145_r2993_p935/		40000
-wA_sl_7		mc11_7TeV.144873.simplifiedModel_wA_slep_noWcascade_7.merge.NTUP_SUSY.e1043_a131_s1353_a145_r2993_p935/		40000
-wA_sl_8		mc11_7TeV.144874.simplifiedModel_wA_slep_noWcascade_8.merge.NTUP_SUSY.e1043_a131_s1353_a145_r2993_p935/		40000
-wA_sl_9		mc11_7TeV.144875.simplifiedModel_wA_slep_noWcascade_9.merge.NTUP_SUSY.e1043_a131_s1353_a145_r2993_p935/		40000
-wA_sl_10	mc11_7TeV.144876.simplifiedModel_wA_slep_noWcascade_10.merge.NTUP_SUSY.e1043_a131_s1353_a145_r2993_p935/	40000
-wA_sl_11	mc11_7TeV.144877.simplifiedModel_wA_slep_noWcascade_11.merge.NTUP_SUSY.e1043_a131_s1353_a145_r2993_p935/	39999
-wA_sl_12	mc11_7TeV.144878.simplifiedModel_wA_slep_noWcascade_12.merge.NTUP_SUSY.e1043_a131_s1353_a145_r2993_p935/	40000
-wA_sl_13	mc11_7TeV.144879.simplifiedModel_wA_slep_noWcascade_13.merge.NTUP_SUSY.e1043_a131_s1353_a145_r2993_p935/	40000
-wA_sl_14	mc11_7TeV.144880.simplifiedModel_wA_slep_noWcascade_14.merge.NTUP_SUSY.e1043_a131_s1353_a145_r2993_p935/	40000
-wA_sl_15	mc11_7TeV.144881.simplifiedModel_wA_slep_noWcascade_15.merge.NTUP_SUSY.e1043_a131_s1353_a145_r2993_p935/	40000
-wA_sl_16	mc11_7TeV.144882.simplifiedModel_wA_slep_noWcascade_16.merge.NTUP_SUSY.e1043_a131_s1353_a145_r2993_p935/	40000
-wA_sl_17	mc11_7TeV.144883.simplifiedModel_wA_slep_noWcascade_17.merge.NTUP_SUSY.e1043_a131_s1353_a145_r2993_p935/	40000
-wA_sl_18	mc11_7TeV.144884.simplifiedModel_wA_slep_noWcascade_18.merge.NTUP_SUSY.e1043_a131_s1353_a145_r2993_p935/	40000
-wA_sl_19	mc11_7TeV.144885.simplifiedModel_wA_slep_noWcascade_19.merge.NTUP_SUSY.e1043_a131_s1353_a145_r2993_p935/	40000
-wA_sl_20	mc11_7TeV.144886.simplifiedModel_wA_slep_noWcascade_20.merge.NTUP_SUSY.e1043_a131_s1353_a145_r2993_p935/	40000
-wA_sl_21	mc11_7TeV.144887.simplifiedModel_wA_slep_noWcascade_21.merge.NTUP_SUSY.e1043_a131_s1353_a145_r2993_p935/	40000
-wA_sl_22	mc11_7TeV.144888.simplifiedModel_wA_slep_noWcascade_22.merge.NTUP_SUSY.e1043_a131_s1353_a145_r2993_p935/	40000
-wA_sl_23	mc11_7TeV.144889.simplifiedModel_wA_slep_noWcascade_23.merge.NTUP_SUSY.e1043_a131_s1353_a145_r2993_p935/	40000
-wA_sl_24	mc11_7TeV.144890.simplifiedModel_wA_slep_noWcascade_24.merge.NTUP_SUSY.e1043_a131_s1353_a145_r2993_p935/	39999
-wA_sl_25	mc11_7TeV.144891.simplifiedModel_wA_slep_noWcascade_25.merge.NTUP_SUSY.e1043_a131_s1353_a145_r2993_p935/	40000
-wA_sl_26	mc11_7TeV.144892.simplifiedModel_wA_slep_noWcascade_26.merge.NTUP_SUSY.e1043_a131_s1353_a145_r2993_p935/	40000
-wA_sl_27	mc11_7TeV.144893.simplifiedModel_wA_slep_noWcascade_27.merge.NTUP_SUSY.e1043_a131_s1353_a145_r2993_p935/	40000
-wA_sl_28	mc11_7TeV.144894.simplifiedModel_wA_slep_noWcascade_28.merge.NTUP_SUSY.e1043_a131_s1353_a145_r2993_p935/	40000
-wA_sl_29	mc11_7TeV.144895.simplifiedModel_wA_slep_noWcascade_29.merge.NTUP_SUSY.e1043_a131_s1353_a145_r2993_p935/	40000
-wA_sl_30	mc11_7TeV.144896.simplifiedModel_wA_slep_noWcascade_30.merge.NTUP_SUSY.e1043_a131_s1353_a145_r2993_p935/	40000
-wA_sl_31	mc11_7TeV.144897.simplifiedModel_wA_slep_noWcascade_31.merge.NTUP_SUSY.e1043_a131_s1353_a145_r2993_p935/	40000
+mc12_8TeV.144874.Herwigpp_UEEE3_CTEQ6L1_simplifiedModel_wA_slep_noWcascade_8.merge.NTUP_SUSY.e1417_s1499_s1504_r3658_r3549_p1032/	40000	1.9283733964
+mc12_8TeV.144876.Herwigpp_UEEE3_CTEQ6L1_simplifiedModel_wA_slep_noWcascade_10.merge.NTUP_SUSY.e1417_s1499_s1504_r3658_r3549_p1032/	40000	2.1906288266
+mc12_8TeV.144877.Herwigpp_UEEE3_CTEQ6L1_simplifiedModel_wA_slep_noWcascade_11.merge.NTUP_SUSY.e1417_s1499_s1504_r3658_r3549_p1032/	40000	1.2050648928
+mc12_8TeV.144880.Herwigpp_UEEE3_CTEQ6L1_simplifiedModel_wA_slep_noWcascade_14.merge.NTUP_SUSY.e1417_s1499_s1504_r3658_r3549_p1032/	40000	0.7144479305
+mc12_8TeV.144881.Herwigpp_UEEE3_CTEQ6L1_simplifiedModel_wA_slep_noWcascade_15.merge.NTUP_SUSY.e1417_s1499_s1504_r3658_r3549_p1032/	40000	0.2878956944
+mc12_8TeV.144883.Herwigpp_UEEE3_CTEQ6L1_simplifiedModel_wA_slep_noWcascade_17.merge.NTUP_SUSY.e1417_s1499_s1504_r3658_r3549_p1032/	40000	0.4464730769
+mc12_8TeV.144889.Herwigpp_UEEE3_CTEQ6L1_simplifiedModel_wA_slep_noWcascade_23.merge.NTUP_SUSY.e1417_s1499_s1504_r3658_r3549_p1032/	40000	0.0923074279
+mc12_8TeV.144895.Herwigpp_UEEE3_CTEQ6L1_simplifiedModel_wA_slep_noWcascade_29.merge.NTUP_SUSY.e1417_s1499_s1504_r3658_r3549_p1032/	40000	0.0195214469
